[package]
name = "asn1"
version = "0.8.7"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/rust-asn1"
keywords = ["asn1"]
license = "BSD-3-Clause"
description = "ASN.1 (DER) parser and writer for Rust."
edition = "2018"

[features]
default = ["std", "derive", "const-generics"]
std = []
const-generics = []
derive = ["asn1_derive"]

[dependencies]
time = { version = "0.3", default-features = false, features = ["parsing", "macros"] }
asn1_derive = { path = "asn1_derive/", version = "0.8.7", optional = true }

[dev-dependencies]
libc = "0.2"
